<resources>
    <string name="app_name">Movies App</string>
    <string name="network_error">Network Error</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="horror">Horror</string>
    <string name="poster">poster</string>
    <string name="spider_man">Spider-man</string>
    <string name="star">star</string>
    <string name="rating">4.3</string>
    <string name="venom_let_there_be_carnage">Venom Let There Be Carnage</string>
    <string name="description">Description</string>
    <string name="retry">Retry</string>
    <string name="now_streaming">Now Streaming</string>
    <string name="popular">Popular</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourites">Favourites</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="see_more">See more</string>
    <string name="divider">Divider</string>
    <string name="already_have_an_account_login">Already have an account? <font color="#FF722A">Log in</font></string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? <font color="#FF722A">Sign up</font></string>
    <string name="login">Login</string>
    <string name="loginInstruction">Log in with one of following options</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign up</string>
    <string name="signUpInstruction">Sign up with one of following options</string>
    <string name="enter_username">Enter username</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create Account</string>
    <string name="trailer_name">Trailer Name</string>
    <string name="log_out">Log out</string>
    <string name="saved_movies">Saved Movies</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="please_connect_to_a_network_text">Network connection lost.\nIn order to continue using app properly,\nplease, connect to network</string>
    <string name="errorEmpty">Required* Please Fill This Fields</string>
    <string name="errorEmail">Required* Does Not matches Email Pattern</string>
    <string name="passDoesNotMatch">passwords does not match</string>
</resources>