<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_8dp">

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="@+id/glPoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/spider_man"
        app:layout_constraintEnd_toEndOf="@id/ivPoster"
        app:layout_constraintStart_toStartOf="@+id/ivPoster"
        app:layout_constraintTop_toBottomOf="@id/ivPoster" />

    <ImageView
        android:id="@+id/ivStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star"
        android:layout_marginTop="@dimen/dimen_8dp"
        app:layout_constraintStart_toStartOf="@id/ivPoster"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:contentDescription="@string/star" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:gravity="start"
        android:text="@string/rating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivPoster"
        app:layout_constraintStart_toEndOf="@id/ivStar"
        app:layout_constraintTop_toTopOf="@+id/ivStar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>