<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glPoster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/venom_let_there_be_carnage"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/dimen_8dp"
        app:layout_constraintBottom_toTopOf="@id/tvRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glPoster"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toTopOf="@id/rvGenres"
        app:layout_constraintEnd_toStartOf="@id/tvRating"
        app:layout_constraintStart_toEndOf="@id/ivPoster"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:contentDescription="@string/star" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/rvGenres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivStar"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGenres"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:listitem="@layout/genre_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glPoster"
        app:layout_constraintTop_toBottomOf="@id/tvRating" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>