<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackGround"
    android:orientation="vertical"
    tools:context=".ui.logIn.LogInFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="@dimen/dimen_16dp"
        android:text="@string/please_connect_to_a_network_text"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/login"
            android:textColor="#FF722A"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toTopOf="@id/tilEmailLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginHeader"
            app:srcCompat="@drawable/ic_app_logo_for_pages" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:textColorHint="#9C9C9C"
            app:boxStrokeColor="#FF722A"
            app:boxStrokeWidth="@dimen/dimen_0dp"
            app:hintTextColor="#FF722A"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/tvLoginHeader"
            app:startIconDrawable="@drawable/ic_email_book_icon"
            app:startIconTint="#FF722A"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_input_rectangle"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColorHint="#9C9C9C"
            app:boxStrokeColor="#FF722A"
            app:boxStrokeWidth="@dimen/dimen_0dp"
            app:hintTextColor="#FF722A"
            app:layout_constraintTop_toBottomOf="@id/tilEmailLayout"
            app:passwordToggleDrawable="@drawable/ic_show_pass_icon"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#FF722A"
            app:startIconDrawable="@drawable/ic_lock_icon"
            app:startIconTint="#FF722A">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_input_rectangle"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/ic_button_background"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/signUpLink" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signUpLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="#9C9C9C"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_150dp"
        android:visibility="gone" />

</androidx.appcompat.widget.LinearLayoutCompat>