<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackGround"
    tools:context=".ui.loggedIn.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@id/ivLogOut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivLogOut" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivUserImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogOut"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textColor="@color/txt_gray"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivUserImage"
            app:layout_constraintTop_toTopOf="@id/ivUserImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:textColor="@color/txt_gray"
            android:textSize="@dimen/dimen_22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvUsername"
            app:layout_constraintTop_toBottomOf="@id/tvUsername" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/ivUserImage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSavedMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/saved_movies"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/ivUserImage" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@id/tvSavedMovies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSavedMovies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSavedMovies"
            tools:listitem="@layout/popular_movie_item" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_logout_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>